2013-03-08  Ramon Casero  <rcasero@gmail.com>

	* Add subversion properties to
	matlab/FiltersToolbox/bw_sb_interp.m and
	matlab/ThirdPartyToolbox/nifti.

2013-03-08  Valentina Carapella <vcarapella@gmail.com>

	* Add matlab/ThirdPartyToolbox/nifti:

	- Toolbox by Jimmy Shen to load, save, make, reslice, view (and
	edit) both NIfTI and ANALYZE data on any platform, downloaded
	today from

	http://www.mathworks.co.uk/matlabcentral/fileexchange/8797

	* Add matlab/FiltersToolbox/bw_sb_interp.m: (0.1.0)

	- Add copyright notice, minimum and maximum input/output arguments
	and default values.

	* Add matlab/FiltersToolbox/bw_sb_interp.m: (0.0.0)

	- My original code for shape-based interpolation of a binary
	segmentation as it was on my hard.

2013-03-07  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/test/test_im2dmatrix.m: (0.1.0)

	* Rename im2imat.cpp as im2dmatrix.cpp.
	* Rename im2imat.m as im2dmatrix.m.
	* matlab/FiltersToolbox/CMakeLists.txt: (0.2.4)

	- Rename im2imat() to im2dmatrix().

	* matlab/FiltersToolbox/im2imat.cpp: (0.2.0)

	- Add input argument with the voxel size in R, C, S. This makes
	more sense, because now what we return is the distance between
	voxels, weighted by the mean intensity of each pair of voxels.

	- Remove minimum size limitation of (3,3,3). Now the image can be
	as small as empty.

	* matlab/FiltersToolbox/im2imat.m: (0.1.2)

	- Update help header. The RES input argument added to the MEX
	implementation has not been added here.

	* matlab/FiltersToolbox/CMakeLists.txt: (0.2.3)

	- Fix bug. Code to install im2imat was missing.

2013-03-06  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/CMakeLists.txt: (0.2.2)

	- Add build of MEX function im2imat(). It had been forgotten and
	had to be built manually with mex.

	* matlab/ThirdPartyToolbox/dijkstra.cpp: (0.2.0)
	* Add matlab/test/test_dijkstra.m:
	* matlab/ThirdPartyToolbox/dijkstra.m: (0.2.0)

	- Now the user can provide a list of targets. Once the algorithm